<resources>
    <string name="done_by_app_name">تم عن طريق تطبيق فاذكرونى اذكركم</string>
    <string name="allow_location_permission">السماح بالاذن</string>
    <string name="this_app_need_allow_location">للحصول على هذه الخاصية يجب الموافقة على الاذن</string>
    <string name="change_permission_in_settings_of_device">Change permission from device\'s Settings</string>
    <string name="ok">موافق</string>
    <string name="no_app_can_handle_this_action">لا يوجد تطبيق يمكنه التعامل مع هذا الاجراء</string>
    <string name="moharam">محرم</string>
    <string name="safar">صفر</string>
    <string name="rabee_awal">ربيع أول</string>
    <string name="rabee_akhar">ربيع آخر</string>
    <string name="gamade_awal">جماد أول</string>
    <string name="gamade_akhar">جماد آخر</string>
    <string name="ragab">رجب</string>
    <string name="shaban">شعبان</string>
    <string name="ramadan">رمضان</string>
    <string name="shawal">شوال</string>
    <string name="zo_el_qeda">ذو القعدة</string>
    <string name="zo_el_hegga">ذو الحجة</string>
    <string name="saturday">السبت</string>
    <string name="sunday">الأحد</string>
    <string name="monday">الاثنين</string>
    <string name="tuesday">الثلاثاء</string>
    <string name="wednesday">الأربعاء</string>
    <string name="thursday">الخميس</string>
    <string name="friday">الجمعة</string>
    <string name="mtrl_timepicker_confirm">حسنا</string>
    <string name="design_program">تصميم وبرمجة</string>
    <string name="call_grand">إتصال</string>
    <string name="whats">واتساب</string>
    <string name="call">إتصال</string>
    <string name="camera">كاميرا</string>
    <string name="gallery">المعرض</string>
    <string name="all_fields_required">جميع الحقول مطلوبة</string>
    <string name="determine_the_date">حدد التاريخ</string>
    <string name="no_data_found">لا توجد بيانات</string>
    <string name="try_again">حاول مرة اخرى</string>
    <string name="january">يناير</string>
    <string name="february">فبراير</string>
    <string name="march">مارس</string>
    <string name="april">إبريل</string>
    <string name="may">مايو</string>
    <string name="june">يونيو</string>
    <string name="july">يوليو</string>
    <string name="august">أغسطس</string>
    <string name="september">سبتمبر</string>
    <string name="october">أكنوبر</string>
    <string name="november">نوفمبر</string>
    <string name="december">ديسمبر</string>
    <string name="h">هـ</string>
    <string name="app_name">فاذكرونى اذكركم</string>
    <string name="location_selection">تحديد الموقع</string>
    <string name="google_geo_api_key" translatable="false">AIzaSyBs0qcQwZhQAlOVoco8JG5qQ6_OoHZ9EMM</string>
    <string name="something_went_wrong">حدث خطأ ما</string>
    <string name="your_address_has_been_selected_successfully">تم اختيار عنوانك بنجاح</string>
    <string name="you_didn_t_accept_permission">لم تقم بالسماح بالاذن</string>
    <string name="check_location_turned_on">تحقق من تفعيل اعدادات الموقع</string>
    <string name="search">بحث</string>
    <string name="call_us">اتصل بنا</string>
    <string name="empty_string"/>
    <string name="specify_my_location">تحديد موقعي</string>
    <string name="skip">تخطي</string>
    <string name="search_for_location">بحث عن موقع</string>
    <string name="do_you_want_to_receive_notifications">هل تريد تلقي الاشعارات ؟</string>
    <string name="on_board_body">يمكنك تفعيل تلقي الاشعارات من التطبيق بتذكير ك بالدعاء واذكار الصباح والمساء ومواقيت الصلاة</string>
    <string name="enable_receiving_notifications">تفعيل تلقي الاشعارات</string>
    <string name="stop_receiving_notifications">عدم تلقي الاشعارات</string>
    <string name="receive_notifications">تلقي الاشعارات</string>
    <string name="nav_app_bar_open_drawer_description_1">افتح القائمة</string>
    <string name="nav_app_bar_navigate_up_description_1">الرجوع للخلف</string>
    <string name="home">الرئيسية</string>
    <string name="pick_sheikh_voice">اختر صوت الشيخ</string>
    <string name="pick_zekr">اختر الذكر</string>
    <string name="retry">إعادة المحاولة</string>
    <string name="back">الرجوع</string>
    <string name="pray">الصلاة</string>
    <string name="qibla">القبلة</string>
    <string name="taspeh">التسبيح</string>
    <string name="current_location">الموقع الحالي</string>
    <string name="suggested_cities">المدن المقترحة</string>
    <string name="share">شارك</string>
    <string name="play">تشغيل</string>
    <string name="pray_times">مواقيت الصلاة</string>
    <string name="fagr">الفجر</string>
    <string name="dohr">الظهر</string>
    <string name="asr">العصر</string>
    <string name="maghrep">المغرب</string>
    <string name="esha">العشاء</string>
    <string name="please_colon">من فضلك :</string>
    <string name="qibla_instructions">من فضلك قم بتثبيت الجوال رأسيا لكي يتم تحديد اتجاه القبلة بشكل صحيح</string>
    <string name="a_taspeh">تسبيح</string>
    <string name="pick_another_zekr">اختيار ذاكر اخر</string>
    <string name="reset">اعادة تعيين</string>
    <string name="negative_one">-1</string>
    <string name="count">قم بالعد</string>
    <string name="determine_your_location">حدد موقعك</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="who_are_we">من نحن</string>
    <string name="favorite">المفضلة</string>
    <string name="alarms">المنبهات</string>
    <string name="notifications">الاشعارات</string>
    <string name="app_not_found">التطبيق غير موجود</string>
    <string name="pick_app">اختر تطبيق</string>
    <string name="donate_for_app">تبرع للتطبيق</string>
    <string name="share_app">مشاركة التطبيق</string>
    <string name="rate_app">تقيم التطبيق</string>
    <string name="insta">انستجرام</string>
    <string name="twitter">تويتر</string>
    <string name="fazkorone_azkorkom">فاذكروني أذكركم</string>
    <string name="name">الاسم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="purpose_of_contact">غرض التواصل</string>
    <string name="message">الرسالة</string>
    <string name="put_image_with_data">ارفق صورة مع البيانات</string>
    <string name="optional_between_brackets">( اختياري )</string>
    <string name="send">ارسال</string>
    <string name="favorite_instructions">لم تضف أى أذكار الي المفضلة قم بقرائه الاذكار واضافتها للمفضلة</string>
    <string name="go_to_azkar">الذهاب الي الاذكار</string>
    <string name="determine_your_remind_of_azkar">حدد وقت تذكيرك بقراءة اذكار المساء</string>
    <string name="determine_your_remind_time">حدد وقت تذكيرك</string>
    <string name="determine_time">حدد الوقت</string>
    <string name="save">حفظ</string>
    <string name="enable_notifications">تشغيل الاشعارات</string>
    <string name="loading">جارى التحميل</string>
    <string name="am">ص</string>
    <string name="field_required">هذا الحقل مطلوب</string>
    <string name="pm">م</string>
    <string name="this_feature_is_not_supported">هذه الخاصية غير مدعومة</string>
    <string name="cancel">الغاء</string>
    <string name="azkar_masaa_alarm">منبه اذكار المساء</string>
    <string name="azkar_sabah_alarm">منبه اذكار الصباح</string>
    <string name="taspeh_alarm">منبه التسبيح</string>
    <string name="determine_the_time">حدد الوقت</string>
    <string name="pause">توقيف</string>
    <string name="empty_data">البيانات فارغة</string>
    <string name="salah">الصلاة</string>
    <string name="sent_successfully">تم الارسال بنجاح</string>
    <string name="auto_selection">تحديد تلقائي</string>
    <string name="compass_accuracy_hint">يرجى تدوير هاتفك وجعل 8 فى الهواء من اجل الحصول على توجيهات دقيقة للقبلة</string>
    <string name="done">تم</string>
    <string name="accuracy_colon_low">الدقة : منخفضة</string>
    <string name="accuracy_colon_medium">الدقة : متوسطة</string>
</resources>
