<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_2"
        android:enabled="true"/>

    <item
        android:id="@+id/action_pray"
        android:title="@string/pray"
        android:icon="@drawable/ic_pray"
        android:enabled="true"/>

    <item
        android:id="@+id/action_qibla"
        android:title="@string/qibla"
        android:icon="@drawable/ic_qibla"
        android:enabled="true"/>

    <item
        android:id="@+id/action_taspeh"
        android:title="@string/taspeh"
        android:icon="@drawable/ic_taspeh"
        android:enabled="true"/>

</menu>